--- a/CW2 Hakeem/button.html
+++ b/CW2 Hakeem/button.html
@@ -1,9 +1,11 @@
 <html>
 	<head>
+	<style>
+	</style>
 		<title>CW2</title>
 		<script src = "script.js"></script>
 	</head>
 	<body>
-		<button onclick = "openNW()" type="button" id = "download">Download</button>
+		<input type = "image" style="width:60px;height:60px;" src = "save.png" onclick = "openNW()" id = "download"></button>
 	</body>
 </html>
