--- a/CW2 Hakeem/button.html
+++ b/CW2 Hakeem/button.html
@@ -3,9 +3,17 @@
 	<style>
 	</style>
 		<title>CW2</title>
-		<script src = "script.js"></script>
+		<script src = "script_local.js"></script>
 	</head>
 	<body>
+		<div id="fb-root"></div>
+			<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v18.0" nonce="wykFjTT7"></script>
 		<input type = "image" style="width:60px;height:60px;" src = "save.png" onclick = "openNW()" id = "download"></button>
+		<input type="image" style="width:60px;height:60px;" src = "2023_Facebook_icon.png" onclick="location.href='https://www.facebook.com/sharer/sharer.php?u=example.org';" id = "fb-share" /></button>
+		<a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Hello%20world"><img src="X.png" width="60px" height="60px"></a>
 	</body>
 </html>
+
+<!--<a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank">
+  Share on Facebook
+</a>-->
