feature - add clear button to remove the self added buttons
only clear all can be done, will figure out how to delete one by one

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <br>
                 <input type="text" id="customKeyword" placeholder="Enter custom keyword">
                 <button id="submitKeyword">Submit</button>
+                <button id="clearAllKeywords">Clear All</button>
                 <button id="cancelKeyword">Cancel</button>
             </div>
         
@@ -50,6 +51,7 @@
                 <iframe id="videoFrame" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
+        
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="ytsearch.js"></script>
