update to latest file

--- a/videoPlayer.html
+++ b/videoPlayer.html
@@ -3,6 +3,7 @@
   <head>
     <title>Youtube</title>
     <script src="https://www.youtube.com/iframe_api"></script>
+    <link rel="stylesheet" href="videoPlayer.css" />
   </head>
   <body>
     <div class="video-container">
@@ -14,6 +15,9 @@
       <div>
         <input type="text" id="note-text" placeholder="Add note" />
         <button id="add-note">Add Note</button>
+		<p><a download="info.txt" id="downloadlink">
+		<img src="save.png" alt="Download" width="60px" height="60px">
+		</a></p>
       </div>
     </div>
     <script src="script.js"></script>
