--- a/CW2 Hakeem - notes, share button/index.html
+++ b/CW2 Hakeem - notes, share button/index.html
@@ -47,6 +47,6 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="ytsearch.js"></script>
+        <script id = "youtube-script" src="ytsearch.js"></script>
     </body>
 </html>
