--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="https://www.youtube.com/iframe_api"></script>
     </head>
     <body>
+        <a>Log in | Sign up</a>
         <div class="container">
             <br>
             <div class="header-container">
